Mini Project Whats your baby name!/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/apache-csv.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/courserajava.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/ShreyamDuttaGupta/Desktop/Java Programming Solving Problems with Software/BabyNames
-d
/Users/ShreyamDuttaGupta/Desktop/Java Programming Solving Problems with Software/BabyNames/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/ShreyamDuttaGupta/Desktop/Java Programming Solving Problems with Software/BabyNames/BabyNames.java
<---- end of javadoc command ---->
Loading source file /Users/ShreyamDuttaGupta/Desktop/Java Programming Solving Problems with Software/BabyNames/BabyNames.java...
/Users/ShreyamDuttaGupta/Desktop/Java Programming Solving Problems with Software/BabyNames/BabyNames.java:119: error: ';' expected
			System.out.println()
			                    ^
1 error
